--- a/app/views/no_cms/admin/menus/menus/edit.html.erb
+++ b/app/views/no_cms/admin/menus/menus/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :second_menu do %>
-  <%= render partial: 'menu_listing_item', collection: @menus, as: 'menu' %>
+  <%= render partial: 'menu_listing_item', collection: @menus, as: 'menu', locals: {current: @menu } %>
 <% end unless @menus.blank? %>
 
 <%= no_cms_admin_form_for @menu do |f| %>
