--- a/app/views/no_cms/admin/menus/menus/edit.html.erb
+++ b/app/views/no_cms/admin/menus/menus/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :ready_js do %>
+  NoCMS.Admin.BlockHandler();
+<% end %>
+
 <% content_for :second_menu do %>
   <%= render partial: 'menu_listing_item', collection: @menus, as: 'menu', locals: {current: @menu } %>
 <% end unless @menus.blank? %>
@@ -7,6 +11,7 @@
   <div class="content">
     <%= render 'no_cms/admin/shared/log_messages' %>
     <%= render 'content_fields', f: f %>
+    <%= render 'no_cms/admin/menus/menu_items/index', f: f %>
   </div>
 
 <% end %>
