Adopting new styles from nocms-admin for nested blocks

--- a/app/views/no_cms/admin/menus/menu_items/_form.html.erb
+++ b/app/views/no_cms/admin/menus/menu_items/_form.html.erb
@@ -1,4 +1,8 @@
-<div class="title">
+<div class="b-title row">
+  <a href="#" class="btn-square ico-collapse-v js-collapse-block" title="Expand /Collapse"></a>
+
+  <%= f.select :kind, NoCms::Admin::Menus.menu_kinds.map{|name, _| [ I18n.t("no_cms.admin.menus.menus.kinds.#{name}"), name ]}, {}, class: 'block_layout_selector' %>
+
   <div class="mo">
     <a href="" class="ico-mini-delete">
     <a href="" class="ico-mini-move-up"></a>
@@ -6,16 +10,13 @@
     <a href="" class="ico-mini-show-hide"></a>
   </div>
 </div>
-<div class="row">
-  <%= f.label :kind %>
-  <%= f.select :kind, NoCms::Admin::Menus.menu_kinds.map{|name, _| [ I18n.t("no_cms.admin.menus.menus.kinds.#{name}"), name ]}, {}, class: 'block_layout_selector' %>
-</div>
-<div class="row">
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-</div>
-
 <div class='layout_fields'>
+  <div class="row">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+  </div>
+
   <%= render_menu_item_partial f %>
+  <%= render 'no_cms/admin/menus/menu_items/nested_index', f: f %>
 </div>
 
