--- a/app/views/no_cms/admin/menus/menu_items/_form.html.erb
+++ b/app/views/no_cms/admin/menus/menu_items/_form.html.erb
@@ -20,3 +20,5 @@
   <%= render 'no_cms/admin/menus/menu_items/nested_index', f: f %>
 </div>
 
+
+<%= f.hidden_field :_destroy,  class: 'destroy', value: '0' %>
