--- a/app/views/no_cms/admin/menus/menu_items/_nested_index.html.erb
+++ b/app/views/no_cms/admin/menus/menu_items/_nested_index.html.erb
@@ -6,7 +6,7 @@
       <%= link_to t('.new_block'), '#', class: 'new_content_block btn _m0' %>
     </div>
 
-    <%= f.fields_for :children do |f_children| %>
+    <%= f.fields_for :children, f.object.children.sort_by(&:position) do |f_children| %>
       <div class="block row <%= menu_item_form_classes(f_children.object).join(" ")%>" id="<%= menu_item_form_id(f_children.object) %>">
         <%= render 'no_cms/admin/menus/menu_items/form', f: f_children %>
       </div>
