--- a/app/views/no_cms/admin/menus/menu_items/_form.html.erb
+++ b/app/views/no_cms/admin/menus/menu_items/_form.html.erb
@@ -21,4 +21,5 @@
 </div>
 
 <%= f.hidden_field :position, class: 'position' %>
+<%= f.hidden_field :draft,  class: 'draft', value: f.object.draft ? '1' : '0' %>
 <%= f.hidden_field :_destroy,  class: 'destroy', value: '0' %>
