Tested removing a menu item

--- a/app/views/no_cms/admin/menus/menu_items/_form.html.erb
+++ b/app/views/no_cms/admin/menus/menu_items/_form.html.erb
@@ -8,10 +8,10 @@
 
 
   <div class="mo">
-    <a href="" class="ico-mini-delete">
-    <a href="" class="ico-mini-move-up"></a>
-    <a href="" class="ico-mini-move-down"></a>
-    <a href="" class="ico-mini-show-hide"></a>
+    <a href="" class="ico-mini-delete"><%=t (".remove") %></a>
+    <a href="" class="ico-mini-move-up"><%=t (".move_up") %></a>
+    <a href="" class="ico-mini-move-down"><%=t (".move_down") %></a>
+    <a href="" class="ico-mini-show-hide"><%=t (".hide") %></a>
   </div>
 </div>
 <div class='layout_fields'>
