#1 Setting the templates to be  destroyed

--- a/app/views/no_cms/admin/menus/menu_items/_form.html.erb
+++ b/app/views/no_cms/admin/menus/menu_items/_form.html.erb
@@ -39,4 +39,4 @@
 
 <%= f.hidden_field :position, class: 'position' %>
 <%= f.hidden_field :draft,  class: 'draft', value: f.object.draft ? '1' : '0' %>
-<%= f.hidden_field :_destroy,  class: 'destroy', value: '0' %>
+<%= f.hidden_field :_destroy,  class: 'destroy', value: f.object.no_cms_admin_template ? '1' : '0' %>
